[package]
name = "honcho"
description = "Honcho is a ChatOps system for Discord & Kubernetes."
version = "0.1.0"
authors = ["Joe Banks <joseph@josephbanks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.0.2"
features = ["full"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend"
]
version = "0.10"
